# booster2024_wasm_components

./: .gitignore  readme.md  task1.md  task2.md  task3.md  task4.md  task5.md
clustering-rs/: Cargo.toml
clustering-rs/src/: lib.rs
clustering-rs/wit/: clustering.wit
scripts/: Dockerfile  install-tooling-linux.sh  install-tooling-macos.sh  install-tooling-win.bat
tasks/01/greeter-js/: app.js  build.mjs  package.json
tasks/01/greeter-py/: app.py  greeter.wit
tasks/02/: greeter.wit
tasks/02/greeter-js/: app.js  build.mjs  greeter-js.wit  greeter.wit
tasks/02/greeter-py/: app.py  greeter-py.wit  greeter.wit
tasks/03/clustering-rs/: Cargo.toml  package-lock.json  serve.js  wasm_module.sh
tasks/03/clustering-rs/src/: bindings.rs  lib.rs
tasks/03/clustering-rs/wit/: clustering.wit
tasks/03/handler/: app.py  clustering.wit  poller.py
tasks/03/handler/wit/: clustering.wit  init.wit
tasks/04/: spin.toml
tasks/04/client/: index.html  package-lock.json  package.json  script.js  style.css  vite.config.js
