[package]
name = "clustering-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
linfa = "0.7.0"
linfa-clustering = "0.7.0"
ndarray = "0.15.6"
wit-bindgen = "0.17.0"
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2", features = ["js"] }
