[package]
name = "clustering-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
linfa = "0.7.0"
linfa-clustering = "0.7.0"
ndarray = "0.15.6"
wasm-bindgen = "0.2.91"
getrandom = { version = "0.2", features = ["js"] }
wit-bindgen = "0.18.0"

[package.metadata.component]
package = "clustering:rs"

[package.metadata.component.dependencies]

[package.metadata.component.target]
path = "wit/clustering.wit"
world = "clustering"
